clusters/production/homeui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeui
  namespace: production
spec:
  type: NodePort
  selector:
    app: homeui
  ports:
  - port: 80
    targetPort: 80
